# KitchenHelper

./: .gitignore
client/: .gitignore  kitchenhelper.service  pyproject.toml  test.py
client/kitchenhelper_client/: App.py  Config.py  DataStore.py  MainWindow.py  RequestHandler.py  TextSpeaker.py  Timers.py  VoiceCommandHandler.py  VoiceCommandInterpreter.py  VoiceCommands.py  VoiceInterpreter.py  __init__.py  schemas.py
client/kitchenhelper_client/States/: BaseState.py  Idle.py  Notes.py  Recipes.py  Timers.py  VoiceCommand.py
client/kitchenhelper_client/pythonUi/:  AddTimerDialog.py  AddNoteDialog.py  AddTimerDialog.py  ListenDialog.py  OneLabelDialog_ui.py  ServerDialog.py
client/kitchenhelper_client/ui/: MainWindow.ui  OneLabelDialog.ui  ServerDialog.ui
server/: pyproject.toml
server/kitchenhelper_server/: __init__.py  crud.py
server/kitchenhelper_server/api/: schemas.py
server/kitchenhelper_server/database/: crud.py  models.py  setup.py
server/kitchenhelper_server/web/: google_scraper.py  recipes.py
