[tool.poetry]
name = "KitchenHelper-client"
version = "0.1.0"
description = ""
authors = ["lorlen <filip.lew975@gmail.com>", "noFrostoo <nofrost1a@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.1"
PyQt5 = "^5.15.4"
SpeechRecognition = "^3.8.1"
pyttsx3 = "^2.90"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
run = "kitchenhelper_client:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
